--- a/andbag/css/reset.css
+++ b/andbag/css/reset.css
@@ -30,7 +30,7 @@ img, video {width: 100%;}
 img {width: 100%;}
 
 /* clearfix */
-.clearfix {*zoom: 1;}
+/* .clearfix {*zoom: 1;} */
 .clearfix:before, .clearfix:after {display: block; content: ''; line-height: 0;}
 .clearfix:after {clear: both;}
 
