--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -254,10 +254,6 @@ body {
 }
 
 .logo_nav .logo {
-	/* position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translateX(-50%) translateY(-50%); */
 	width: 118px;
 }
 
@@ -286,14 +282,11 @@ body {
 
 .logo_nav .nav > ul ul {
 	position: absolute;
-	width: 1240px;
-	height: 100px;
+	width: 600px;
 	top: 100px;
 	left: 0;
-	display: none;
 	z-index: 4;
 	display: inline-block;
-	background-color: #fff;
 }
 
 .logo_nav .nav > ul ul li {
@@ -307,29 +300,28 @@ body {
 	font-weight: 600;
 }
 
-/* .logo_nav .nav li.two {
-	position: relative;
-} */
-
-.logo_nav .nav > ul ul.mini {
-	width: 500px;
-}
-
-.logo_nav .nav > ul ul.mini li {
-	margin: 0 0 0 50px;
-}
-
-.logo_nav .nav > ul ul.mini li a {
-	font-size: 15px;
-	font-weight: normal;
-}
-
 .logo_nav .nav a {
 	color: #000;
 }
 
 .logo_nav .nav a:hover {
 	color: #ff463a;
+}
+
+.nav_back {
+	position: absolute;
+	top: 100px;
+	left: 0;
+	width: 100%;
+	height: 100px;
+	background: #fff;
+	display: none;
+}
+
+.nav_back.up {
+	top: 70px;
+	height: 80px;
+	transition: all .3s ease;
 }
 
 /* 검색창 */
@@ -1348,7 +1340,7 @@ html {
 }
 
 @media (max-width: 1024px) {
-
+	.logo_nav .nav > ul > li > a {padding-right: 30px; font-size: 1.4rem;}
 }
 
 @media (max-width: 768px) {
