--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -504,6 +504,39 @@ body {
 	font-family: 'Oswald', sans-serif;
 }
 
+.m_nav {
+	position: absolute;
+	top: 25px;
+	left: 24px;
+	width: 23px;
+	height: 20px;
+}
+
+.m_nav .icon_space {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
+.m_nav .icon_space span {
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	background: #000002;
+}
+
+.m_nav .icon_space span:nth-child(1) {
+	top: 0;
+}
+
+.m_nav .icon_space span:nth-child(2) {
+	top: 8px;
+}
+
+.m_nav .icon_space span:nth-child(3) {
+	bottom: 0;
+}
+
 /* 배너 */
 .slider {
 	position: relative;
@@ -1340,7 +1373,23 @@ html {
 }
 
 @media (max-width: 1024px) {
-	.logo_nav .nav > ul > li > a {padding-right: 30px; font-size: 1.4rem;}
+	.logo_nav .nav > ul > li > a {padding-right: 25px; font-size: 1.3rem;}
+	.logo_nav .logo {width: 100px;}
+	.nav_right {width: 280px;}
+	.search_box {width: 205px;}
+}
+
+@media (max-width: 840px) {
+	#header .header_nav {display: none;}
+	#header .logo_nav {height: 70px;}
+	.logo_nav .header_flex {height: 70px;}
+	.logo_nav .nav {visibility: hidden;}
+	.logo_nav .logo {width: 90px;}
+	.search_box {width: 25px; padding: 0; border-bottom: 0;}
+	.search_box .search_area .search_icon {top: 2px; width: 22px; height: 22px; background: url(../img/btn_sch.gif) no-repeat center; background-size: cover;}
+	.search_box .search_area input, .search_box .search_area .close_icon, .search_pop {display: none;}
+
+	#banner {top: 70px;}
 }
 
 @media (max-width: 768px) {
