--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -10,7 +10,7 @@ body {
 	width: 1240px;
 	height: inherit;
 	margin: 0 auto;
-/*	background-color: rgba(0,0,0,0.1);*/
+	/* background-color: rgba(0,0,0,0.1); */
 }
 
 #header {
@@ -38,7 +38,7 @@ body {
 	position: relative;
 	top: 136px;
 	width: 100%;
-	height: 720px;
+	max-height: 720px;
 }
 
 #best {
@@ -618,6 +618,11 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	border: 2px solid red;
+}
+
+.slider img {
+	
 }
 
 .slider .slick-arrow {
