--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -39,6 +39,7 @@ body {
 	top: 136px;
 	width: 100%;
 	max-height: 720px;
+	overflow: hidden;
 }
 
 #best {
@@ -619,10 +620,6 @@ body {
 	width: 100%;
 	height: 100%;
 	border: 2px solid red;
-}
-
-.slider img {
-	
 }
 
 .slider .slick-arrow {
@@ -1472,6 +1469,8 @@ html {
 	.m_nav_icon {display: block;}
 
 	#banner {top: 70px;}
+	.slider {height: 450px;}
+	.slider img {height: 450px; object-fit: cover;}
 }
 
 @media (max-width: 768px) {
@@ -1479,10 +1478,15 @@ html {
 
 	.logo_nav .logo a img {width: 90px;}
 	.m_nav_icon {left: 20px;}
+
+	/* #banner {max-height: 500px;} */
+	.slider {height: 400px;}
+	.slider img {height: 400px; object-fit: cover;}
 }
 
 @media (max-width: 600px) {
-	
+	.slider {height: 380px;}
+	.slider img {height: 380px; object-fit: cover;}
 }
 
 @media (max-width: 480px) {
