--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -39,7 +39,6 @@ body {
 	top: 136px;
 	width: 100%;
 	max-height: 720px;
-	overflow: hidden;
 }
 
 #best {
@@ -619,7 +618,6 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	border: 2px solid red;
 }
 
 .slider .slick-arrow {
@@ -643,18 +641,31 @@ body {
 	background: url(../img/arrow_photo_next.png) no-repeat center;
 }
 
-/*
-.slider_counter {
+.slick-dots {
 	position: absolute;
-	top: 85px;
-	left: 280px;
-	width: 120px;
-	height: 45px;
-	background-color: rgba(50,50,50,0.4);
-	border-radius: 30px;
-	z-index: 14;
+	bottom: 10px;
+	right: 16px;
 }
-*/
+
+.slick-dots li {
+	display: inline-block;
+}
+
+.slick-dots li:nth-child(2) {
+	margin: 0 8px;
+}
+
+.slick-dots li button {
+	width: 12px;
+	height: 12px;
+	border-radius: 100%;
+	background-color: #fff;
+	font-size: 0;
+}
+
+.slick-dots li.slick-active button {
+	border: 3px solid #000002;	
+}
 
 .slick_counter {
 	position: absolute;
@@ -1471,6 +1482,7 @@ html {
 	#banner {top: 70px;}
 	.slider {height: 450px;}
 	.slider img {height: 450px; object-fit: cover;}
+	.slick_counter, .slick-arrow {display: none;}
 }
 
 @media (max-width: 768px) {
