--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -1201,30 +1201,96 @@ body {
 
 /* 룩북 반응형 모바일 슬라이드 */
 .lookbook_m {
-	margin: 0 auto;
+	position: relative;
+	width: 100%;
+	height: 1300px;
 	text-align: center;
-	background-color: red;
+	background: red;
 }
 
-.lookbook_m > div {
-	width: 300px;
-	height: 500px;
-	background-color: #000;
+.lookbook_m .slick-prev {
+	position: absolute;
+	top: 50%;
+	left: 0;
 }
 
-.lookbook_m .look1 {
+.lookbook_m .slick-next {
+	position: absolute;
+	top: 50%;
+	right: 0;
+}
+
+.lookbook_m div {
+	width: 450px;
+	height: 100%;
+	margin: 0 auto;
+	background-color: #fff;
+}
+
+.lookbook_m .slick-center {
 	
+	border: 1px solid red;
 }
 
-.lookbook_m .look2 {
-	background: url(../img/IMG1578iox296725083.png) no-repeat center;
-	background-size: cover;
+.lookbook_m div .look_img {
+	position: relative;
+	width: 400px;
+	height: 600px;
 }
 
-.lookbook_m .look3 {
-	background: url(../img/IMG1578MYo294232008.jpg) no-repeat center;
-	background-size: cover;
+.lookbook_m div .look_img span {
+	position: absolute;
+	left: 45px;
+	bottom: 20px;
+	font-size: 4rem;
+	font-family: 'Oswald', sans-serif;
+	font-weight: bold;
+	color: #fff;
 }
+
+.lookbook_m div .look_product {
+	height: 250px;
+	margin: 50px 0;
+}
+
+.lookbook_m div .look_product .product_1 img {
+	width: 250px;
+	margin: 0 auto;
+	filter: drop-shadow(5px 5px 5px #ccc);
+}
+
+.lookbook_m div .look_product .product_1 span {
+	display: block;
+	margin-top: 20px;
+	font-size: 1.6rem;
+	font-weight: 600;
+}
+
+.lookbook_m div .look_product .product_1 .click {
+	display: block;
+	margin-top: 15px;
+	text-decoration: underline;
+}
+
+.lookbook_m div .look_product .product_2 img {
+	width: 180px;
+	margin: 0 auto;
+	filter: drop-shadow(5px 5px 5px #ccc);
+}
+
+.lookbook_m div .look_product .product_2 span {
+	display: block;
+	margin-top: 20px;
+	font-size: 1.6rem;
+	font-weight: 600;
+}
+
+.lookbook_m div .look_product .product_2 .click {
+	display: block;
+	margin-top: 15px;
+	text-decoration: underline;
+}
+
 
 /* 공지 */
 #notice dl {
