--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -1058,7 +1058,7 @@ body {
 	font-size: 20px;
 }
 
-.look_book_box {
+/* .look_book_box {
 	position: relative;
 	padding: 0 20px;
 	height: 950px;
@@ -1197,92 +1197,120 @@ body {
 
 .look_book_box li.box3 .txt_box {
 	left: 35px;
-}
+} */
 
 /* 룩북 반응형 모바일 슬라이드 */
 .lookbook_m {
 	position: relative;
-	width: 100%;
-	height: 1300px;
 	text-align: center;
-	background: red;
+	overflow: hidden;
+	padding-bottom: 100px;
 }
 
 .lookbook_m .slick-prev {
 	position: absolute;
-	top: 50%;
-	left: 0;
+	width: 150px;
+	height: 150px;
+	top: 40%;
+	left: 10%;
+	z-index: 5;
+	text-indent: -9999px;
+	background: url(../img/arrow-01.png) no-repeat;
+	background-size: cover;
+	cursor: pointer;
+}
+
+.lookbook_m .slick-prev:active {
+	transform: translateX(-10px);
+	transition: all .3s;
 }
 
 .lookbook_m .slick-next {
 	position: absolute;
-	top: 50%;
-	right: 0;
+	width: 150px;
+	height: 150px;
+	top: 40%;
+	right: 10%;
+	z-index: 5;
+	text-indent: -9999px;
+	background: url(../img/arrow-02.png) no-repeat;
+	background-size: cover;
+	cursor: pointer;
 }
 
-.lookbook_m div {
-	width: 400px;
-	height: 100%;
-	margin: 0 auto;
-	background-color: #fff;
+.lookbook_m .slick-next:active {
+	transform: translateX(10px);
+	transition: all .3s;
 }
 
-.lookbook_m div .look_img {
+.lookbook_m .slick-list {
+	margin: 0 -12px;
+}
+
+.lookbook_m .slick-slide {
+	margin: 0 12px;
+	opacity: 0.2;
+}
+
+.lookbook_m .slick-center {
+	opacity: 1;
+	transition: all .5s;
+}
+
+.lookbook_m .slick-center .look_img {
+	transform: scale(1.1);
+	transition: all .5s;
+	z-index: 3;
+}
+
+.lookbook_m .look .look_img {
 	position: relative;
-	width: 400px;
-	height: 600px;
 }
 
-.lookbook_m div .look_img span {
+.lookbook_m .look .look_img span {
 	position: absolute;
 	left: 20px;
 	bottom: 15px;
-	font-size: 4rem;
+	font-size: 3rem;
 	font-family: 'Oswald', sans-serif;
 	font-weight: bold;
 	color: #fff;
 }
 
-.lookbook_m div .look_product {
-	height: 250px;
-	margin: 50px 0;
-}
-
-.lookbook_m div .look_product .product_1 img {
-	width: 250px;
+.lookbook_m .look .look_product .product_1 img {
+	width: 200px;
 	margin: 0 auto;
-	filter: drop-shadow(5px 5px 5px #ccc);
 }
 
-.lookbook_m div .look_product .product_1 span {
+.lookbook_m .look .look_product .product_1 span {
 	display: block;
 	margin-top: 20px;
 	font-size: 1.6rem;
 	font-weight: 600;
 }
 
-.lookbook_m div .look_product .product_1 .click {
+.lookbook_m .look .look_product .product_1 .click {
 	display: block;
-	margin-top: 15px;
+	margin-top: 5px;
 	text-decoration: underline;
 }
 
-.lookbook_m div .look_product .product_2 img {
+.lookbook_m .look .look_product .product_2 img {
 	width: 180px;
 	margin: 0 auto;
-	filter: drop-shadow(5px 5px 5px #ccc);
+	filter: drop-shadow(5px 5px 5px #666);
 }
 
-.lookbook_m div .look_product .product_2 span {
+.lookbook_m .look .look_product .product_2 span {
 	display: block;
 	margin-top: 20px;
 	font-size: 1.6rem;
 	font-weight: 600;
 }
 
-.lookbook_m div .look_product .product_2 .click {
+.lookbook_m .look .look_product .product_2 .click {
 	display: block;
-	margin-top: 15px;
+	margin-top: 5px;
 	text-decoration: underline;
 }
 
@@ -1570,6 +1598,8 @@ html {
 	.logo_nav .logo {width: 100px;}
 	.nav_right {width: 280px;}
 	.search_box {width: 205px;}
+
+	.lookbook_m .look .look_img span {font-size: 2.5rem;}
 }
 
 @media (max-width: 840px) {
@@ -1608,6 +1638,10 @@ html {
 	.popup .pop_review h1 {margin-left: 60px; padding-bottom: 30px;}
 	.popup .pop_review .pop_reviewer {padding-bottom: 40px;}
 	
+	.lookbook_m .slick-center .look_img {transform: scale(1.3);}
+	.look_product {margin-top: 50px;}
+	.lookbook_m .slick-list {margin: 0 -12px;}
+	.lookbook_m .slick-slide {margin: 0 12px;}
 }
 
 @media (max-width: 768px) {
@@ -1618,6 +1652,12 @@ html {
 
 	.slider {height: 400px;}
 	.slider img {height: 400px; object-fit: cover;}
+
+	.lookbook_m .slick-prev {width: 80px; height: 80px;}
+	.lookbook_m .slick-next {width: 80px; height: 80px;}
+	.lookbook_m .look .look_img span {left: 15px;}
+	.lookbook_m .look .look_product .product_1 img {width: 150px;}
+	.lookbook_m .look .look_product .product_2 img {width: 130px;}
 }
 
 @media (max-width: 600px) {
@@ -1625,6 +1665,8 @@ html {
 	.slider img {height: 380px; object-fit: cover;}
 
 	.sale {width: 50px; height: 50px; line-height: 50px;}
+
+	.lookbook_m .look .look_img span {font-size: 2rem;}
 }
 
 @media (max-width: 480px) {
