--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -1694,6 +1694,8 @@ html {
 	.lookbook_m .look .look_img span {font-size: 2rem;}
 
 	#notice dl {padding: 0 16px;}
+
+	.bottom_foot {padding-bottom: 150px;}
 }
 
 @media (max-width: 480px) {
