--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -523,7 +523,7 @@ body {
 .m_nav_icon a span {
 	position: absolute;
 	width: 100%;
-	height: 3px;
+	height: 5%;
 	background: #000002;
 }
 
@@ -604,6 +604,7 @@ body {
 	margin: 15px 0;
 	font-size: 2.3rem;
 	font-weight: bold;
+	font-family: 'Oswald', sans-serif;
 	color: #000002;
 }
 
@@ -1629,6 +1630,9 @@ html {
 	.search_box .search_area input, .search_box .search_area .close_icon, .search_pop {display: none;}
 	.m_nav_icon {display: block;}
 
+	.m_nav_menu .m_menu > ul > li > a {font-size: 3rem;}
+	.m_nav_menu .m_menu > ul ul li a {font-size: 2rem;}
+
 	#banner {top: 70px;}
 	.slider {height: 450px;}
 	.slider img {height: 450px; object-fit: cover;}
@@ -1704,7 +1708,7 @@ html {
 	.logo_nav .logo {margin-top: 5px;}
 	.logo_nav .logo a img {width: 70px;}
 
-	.search_box .search_area .search_icon {top: -9px; width: 20px; height: 20px;}
+	.search_box .search_area .search_icon {top: -11px; left: 5px; width: 20px; height: 20px;}
 
 	.basket {display: none;}
 
