--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -598,7 +598,7 @@ body {
 }
 
 .m_nav_menu .m_menu {
-	padding: 0 24px;
+	padding: 0 24px 50px;
 }
 
 .m_nav_menu .m_menu > ul > li > a {
@@ -771,7 +771,11 @@ body {
 	float: left;
 	height: 22px;
 	line-height: 22px;
-	margin-right: 20px;
+	margin-right: 15px;
+}
+
+.box_bottom li:last-child {
+	margin-right: 10px;
 }
 
 .box_bottom li.del span {
@@ -782,7 +786,7 @@ body {
 }
 
 .box_bottom li.price span {
-	font-size: 2rem;
+	font-size: 2.3rem;
 	font-weight: bold;
 }
 
