--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -620,7 +620,28 @@ body {
 .slider {
 	position: relative;
 	width: 100%;
-	height: 100%;
+	height: 720px;
+}
+
+.slider .bs1 {
+	width: 100%;
+	height: 720px;
+	background: url(../img/IMG1592tuV980005176.jpg) no-repeat center;
+	background-size: cover;
+}
+
+.slider .bs2 {
+	width: 100%;
+	height: 720px;
+	background: url(../img/IMG1592JwG811554656.jpg) no-repeat center;
+	background-size: cover;
+}
+
+.slider .bs3 {
+	width: 100%;
+	height: 720px;
+	background: url(../img/IMG1592AXL891283755.jpg) no-repeat center;
+	background-size: cover;
 }
 
 .slider .slick-arrow {
@@ -1587,6 +1608,8 @@ html {
 	.nav_right {width: 280px;}
 	.search_box {width: 205px;}
 
+	.slider {height: 590px;}
+	.slider .bs1, .slider .bs2, .slider .bs3 {height: 590px;}
 	.slick_counter {top: auto; left: auto; bottom: 24px; right: 24px;}
 	.slider .slick-prev {left: auto; right: 110px;}
 	.slider .slick-next {left: auto; right: 24px;}
@@ -1618,7 +1641,7 @@ html {
 
 	#banner {top: 70px;}
 	.slider {height: 450px;}
-	.slider img {height: 450px; object-fit: cover;}
+	.slider .bs1, .slider .bs2, .slider .bs3 {height: 450px;}
 
 	#best {margin-top: 140px;}
 	.list1 .cell {width: 50%;}
@@ -1651,7 +1674,7 @@ html {
 	.m_nav_icon {left: 20px;}
 
 	.slider {height: 400px;}
-	.slider img {height: 400px; object-fit: cover;}
+	.slider .bs1, .slider .bs2, .slider .bs3 {height: 400px;}
 	.slick_counter {width: 95px; height: 30px; line-height: 30px; bottom: 16px; right: 16px; background-color: rgba(50,50,50,0.7);}
 	.slider .slick-prev {right: 80px;}
 	.slider .slick-next {right: 16px;}
@@ -1674,8 +1697,11 @@ html {
 @media (max-width: 600px) {
 	#footer {padding: 70px 30px;}
 
-	.slider {height: 380px;}
-	.slider img {height: 380px; object-fit: cover;}
+	.slider {height: 500px;}
+	.slider .bs1, .slider .bs2, .slider .bs3 {height: 500px;}
+	.slider .bs1 {background: url(../img/summer_base_make_up.jpg) no-repeat center; background-size: cover;}
+	.slider .bs2 {background: url(../img/be_glow.jpg) no-repeat center; background-size: cover;}
+	.slider .bs3 {background: url(../img/real_eye_palette.jpg) no-repeat center; background-size: cover;}
 
 	.sale {width: 50px; height: 50px; line-height: 50px;}
 
@@ -1700,6 +1726,9 @@ html {
 	.m_nav_icon a span:nth-child(2) {top: 7px;}
 
 	#banner {top: 55px;}
+
+	.slider {height: 350px;}
+	.slider .bs1, .slider .bs2, .slider .bs3 {height: 350px;}
 
 	.list2 .review_img {height: 300px;}
 
