banner image change

--- a/espoir/css/style.css
+++ b/espoir/css/style.css
@@ -626,21 +626,21 @@ body {
 .slider .bs1 {
 	width: 100%;
 	height: 720px;
-	background: url(../img/IMG1592tuV980005176.jpg) no-repeat center;
+	background: url(../img/summer_1240.jpg) no-repeat center;
 	background-size: cover;
 }
 
 .slider .bs2 {
 	width: 100%;
 	height: 720px;
-	background: url(../img/IMG1592JwG811554656.jpg) no-repeat center;
+	background: url(../img/beglow_1240.jpg) no-repeat center;
 	background-size: cover;
 }
 
 .slider .bs3 {
 	width: 100%;
 	height: 720px;
-	background: url(../img/IMG1592AXL891283755.jpg) no-repeat center;
+	background: url(../img/real_eye_1240.jpg) no-repeat center;
 	background-size: cover;
 }
 
