--- a/coffeenie/css/index.css
+++ b/coffeenie/css/index.css
@@ -783,37 +783,35 @@ body {
 	background: url(../img/top_icon_blue-01.png) no-repeat 0 0;
 }
 
-
 /* media query */
 /* 화면 너비 0 ~ 1520px 데스크탑 */
-/*
-@media (max-width: 1520px) {
+
+/* @media (max-width: 1520px) {
 	#banner {width: 100%;}
-}
-*/
+} */
+
 
 /* 화면 너비 0 ~ 1200px 데스크탑 */
-/*
-@media (max-width: 1200px) {
+
+/* @media (max-width: 1200px) {
 	.insta .ins_img li:nth-child(9) {display: none;}
 	.insta .ins_img li:last-child {display: none;}
-}
-*/
+} */
+
 
 /* 화면 너비 0 ~ 1024px 데스크탑 */
-/*
+
 @media (max-width: 1024px) {
 	.container {width: 100%;}
 	.header .header_nav {display: none;}
 	.header .header_nav.on {display: block;}
 	.header .header_logo {margin-top: 10px;}
-	.header .header_logo h1 a img:first-child {display: none;}
-	.header .header_logo h1 a img:last-child {display: block;}
+	/* .header .header_logo h1 a img:first-child {display: none;}
+	.header .header_logo h1 a img:last-child {display: block;} */
 	.header .nav_btn {display: block;}
-*/
+
 	
-	/* 모바일 메뉴 */
-/*
+/* 모바일 메뉴 */
 	.m_nav {display: none;}
 	.m_nav.on {display: block; }
 	.m_nav.on::after {content: ""; display: block; width: 100%; height: 100%; position: fixed; top: 0; left: 0; z-index: 50; background-color: rgba(0,0,0,0.5);}
@@ -823,4 +821,4 @@ body {
 	.m_nav.on .nav > ul > li:hover > a {background-color: none; color: none;}
 	.m_nav.on .nav > ul ul {display: none;}
 }
-*/
+
