--- a/coffeenie/css/index.css
+++ b/coffeenie/css/index.css
@@ -11,6 +11,7 @@ body {
 
 #banner {
 	width: 100%;
+	height: 470px;
 	margin-bottom: 80px;
 }
 
@@ -22,7 +23,7 @@ body {
 .container {
 	width: 1000px;
 	margin: 0 auto;
-/*	background-color: rgba(0,0,0,0.1);*/
+	/*	background-color: rgba(0,0,0,0.1);*/
 }
 
 /* 헤더 */
@@ -57,9 +58,13 @@ body {
 	font-weight: bold;
 }
 
-.header .header_logo {	
+.header .header_logo {
 	margin: 0 auto;
 	width: 120px;
+}
+
+.header .header_logo .m_logo {
+	display: none;
 }
 
 .header .header_logo a {
@@ -102,63 +107,24 @@ body {
 	border-bottom: 2px solid #5a87c5;
 }
 
-.nav_close {
-	display: none;
-	top: 10px;
-	right: 82%;
-	position: fixed;
-	width: 50px;
-	height: 50px;
-	z-index: 55;
-}
-
-.nav_close a::after, .nav_close a::before {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	content: "";
-	width: 10%;
-	height: 80%;
-	background-color: white;
-	transform: translateX(-50%) translateY(-50%) rotate(45deg);
-}
-
-.nav_close a::before {
-	transform: translateX(-50%) translateY(-50%) rotate(-45deg);
-}
-
-/*
-.nav::before {
-	display: none;
-	content: "";
-	position: absolute;
-	top: 64px;
-	left: 0;
-	width: 100%;
-	height: 300px;
-	background-color: #5a87c5;
-	z-index: 1;
-}
-*/
-
-.nav > ul {
+.nav>ul {
 	max-width: 1000px;
 	margin: 0 auto;
 }
 
-.nav > ul::after {
+.nav>ul::after {
 	content: "";
 	display: block;
 	clear: both;
 }
 
-.nav > ul > li {
+.nav>ul>li {
 	position: relative;
 	float: left;
 	width: 20%;
 }
 
-.nav > ul > li > a {
+.nav>ul>li>a {
 	display: block;
 	padding: 20px;
 	font-size: 16px;
@@ -166,12 +132,12 @@ body {
 	color: #5a87c5;
 }
 
-.nav > ul > li:hover > a {
+.nav>ul>li:hover>a {
 	background-color: #5a87c5;
 	color: #fff;
 }
 
-.nav > ul ul {
+.nav>ul ul {
 	display: none;
 	position: absolute;
 	top: 100%;
@@ -182,16 +148,16 @@ body {
 	padding: 20px 0;
 }
 
-.nav ul ul > li {
+.nav ul ul>li {
 	padding: 8px 0px;
 }
 
-.nav ul ul > li > a {
+.nav ul ul>li>a {
 	color: #fff;
 	position: relative;
 }
 
-.nav ul ul > li > a::after {
+.nav ul ul>li>a::after {
 	content: "";
 	position: absolute;
 	left: 0;
@@ -202,11 +168,11 @@ body {
 	transition: all .3s ease;
 }
 
-.nav ul ul > li:hover > a::after {
+.nav ul ul>li:hover>a::after {
 	width: 100%;
 }
 
-.nav > .menuback {
+.nav>.menuback {
 	display: none;
 	position: absolute;
 	top: 64px;
@@ -215,6 +181,107 @@ body {
 	height: 220px;
 	background-color: #5a87c5;
 	z-index: 10;
+}
+
+/* 모바일 메뉴 */
+.m_nav {
+	position: fixed;
+	top: 0;
+	right: 0;
+	display: block;
+	width: 60%;
+	height: 100%;
+	z-index: 20;
+	background-color: #fff;
+}
+
+.m_nav .nav_close {
+	position: absolute;
+	top: 22px;
+	right: 22px;
+	width: 30px;
+	height: 30px;
+	z-index: 55;
+}
+
+.m_nav .nav_close a::after,
+.m_nav .nav_close a::before {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	content: "";
+	width: 10%;
+	height: 80%;
+	background-color: #ccc;
+	transform: translateX(-50%) translateY(-50%) rotate(45deg);
+}
+
+.m_nav .nav_close a::before {
+	transform: translateX(-50%) translateY(-50%) rotate(-45deg);
+}
+
+.m_nav .m_login {
+	width: 100%;
+	height: 70px;
+	line-height: 70px;
+}
+
+.m_nav .m_login a {
+	margin: 0 10px;
+	font-size: 15px;
+	color: #5A87C5;
+	font-weight: bold;
+}
+
+.m_nav .m_login a:first-child {
+	margin-left: 24px;
+}
+
+.m_nav .m_menu {
+
+}
+
+.m_nav .m_menu ul {
+	
+}
+
+.m_nav .m_menu li {
+	
+}
+
+.m_nav .m_menu > ul > li > a {
+	position: relative;
+}
+
+.m_nav .m_menu > ul > li > a:after {
+	position: absolute;
+	top: 20px;
+	right: 24px;
+	content: "\f078";
+    font: 15px/1 'FontAwesome';
+}
+
+.m_nav .m_menu li a {
+	display: block;
+	font-size: 1.8rem;
+	font-weight: bold;
+	color: #616161;
+	padding: 15px 24px;
+}
+
+.m_nav .m_menu > ul ul {
+	display: none;
+}
+
+.m_nav .m_menu > ul ul li a {
+	font-size: 1.5rem;
+	font-weight: normal;
+	background-color: #f9f9f9;
+	border-top: 1px solid #d6d6d6;
+}
+
+.m_nav .m_menu > ul ul li a.last {
+	border-bottom: 1px solid #d6d6d6;
 }
 
 /* 배너 */
@@ -277,19 +344,25 @@ body {
 /* 슬릭 배너 */
 .slides {
 	position: relative;
-	max-width: 1520px;
-	margin: 0 auto;
-	overflow: hidden;
-}
-
-.slides div a {
-	outline: none;
-}
-
-.slides div img {
-	display: block;
 	width: 100%;
-	overflow: hidden;
+	height: 100%;
+}
+
+.slides div {
+	height: 100%;
+	background-size: cover;
+}
+
+.slides .s1 {
+	background: url(../img/strawberry_banner.jpg) no-repeat center;
+}
+
+.slides .s2 {
+	background: url(../img/coffeenie_sweet_pumpkin_banner.jpg) no-repeat center;
+}
+
+.slides .s3 {
+	background: url(../img/b_big.jpg) no-repeat center;
 }
 
 .slides button {
@@ -309,8 +382,8 @@ body {
 }
 
 .slides .slick-prev::after {
-    content: "\f104";
-    font: 60px/1 'FontAwesome';
+	content: "\f104";
+	font: 60px/1 'FontAwesome';
 }
 
 .slides .slick-next {
@@ -326,8 +399,8 @@ body {
 }
 
 .slides .slick-next::after {
-    content: "\f105";
-    font: 60px/1 'FontAwesome';
+	content: "\f105";
+	font: 60px/1 'FontAwesome';
 }
 
 .slides .slick-dots {
@@ -406,8 +479,8 @@ body {
 }
 
 .main_center .new_slide .slick-prev::after {
-    content: "\f104";
-    font: 40px/1 'FontAwesome';
+	content: "\f104";
+	font: 40px/1 'FontAwesome';
 }
 
 .main_center .new_slide .slick-next {
@@ -422,8 +495,8 @@ body {
 }
 
 .main_center .new_slide .slick-next::after {
-    content: "\f105";
-    font: 40px/1 'FontAwesome';
+	content: "\f105";
+	font: 40px/1 'FontAwesome';
 }
 
 .main_center .new_slide div a {
@@ -529,8 +602,6 @@ body {
 	cursor: pointer;
 	background: url(../img/search_icon.png);
 }
-
-
 
 /* MD 상품 */
 .md {
@@ -661,12 +732,12 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0,0);
+	background-color: rgba(0, 0, 0, 0);
 	z-index: 15;
 }
 
 .ins_img li a:hover::before {
-	background-color: rgba(90,135,197,0.3);
+	background-color: rgba(90, 135, 197, 0.3);
 }
 
 .ins_img li:hover img {
@@ -800,25 +871,51 @@ body {
 
 
 /* 화면 너비 0 ~ 1024px 데스크탑 */
-
 @media (max-width: 1024px) {
-	.container {width: 100%;}
-	.header .header_nav {display: none;}
-	.header .header_nav.on {display: block;}
-	.header .header_logo {margin-top: 10px;}
-	/* .header .header_logo h1 a img:first-child {display: none;}
-	.header .header_logo h1 a img:last-child {display: block;} */
-	.header .nav_btn {display: block;}
+	.container {
+		width: 100%;
+	}
 
-	
-/* 모바일 메뉴 */
-	.m_nav {display: none;}
-	.m_nav.on {display: block; }
-	.m_nav.on::after {content: ""; display: block; width: 100%; height: 100%; position: fixed; top: 0; left: 0; z-index: 50; background-color: rgba(0,0,0,0.5);}
+	.header {
+		margin-bottom: 20px;
+	}
+
+	.header .header_nav {
+		display: none;
+	}
+
+	.header .header_nav.on {
+		display: block;
+	}
+
+	.header .header_logo {
+		margin-top: 20px;
+	}
+
+	.header .header_logo .pc_logo {
+		display: none;
+	}
+
+	.header .header_logo .m_logo {
+		display: block;
+	}
+
+	.header .nav_btn {
+		display: block;
+		top: -2px;
+	}
+
+	.nav {
+		display: none;
+	}
+
+	/* 모바일 메뉴 */
+
+	/* .m_nav.on {display: block;} */
+	/* .m_nav.on::after {content: ""; display: block; width: 100%; height: 100%; position: fixed; top: 0; left: 0; z-index: 50; background-color: rgba(0,0,0,0.5);}
 	.m_nav.on .nav {position: absolute; width: 80%; height: 100%; top: 0; right: 0; z-index: 55; background-color: #fff; border-bottom: none;}
 	.m_nav.on .nav > ul {max-width: none;}
 	.m_nav.on .nav > ul > li {position: relative; float: none; width: 100%; text-align: left; border-bottom: 2px solid #5a87c5;}
 	.m_nav.on .nav > ul > li:hover > a {background-color: none; color: none;}
-	.m_nav.on .nav > ul ul {display: none;}
+	.m_nav.on .nav > ul ul {display: none;} */
 }
-
