--- a/coffeenie/css/index.css
+++ b/coffeenie/css/index.css
@@ -11,7 +11,7 @@ body {
 }
 
 #banner {
-	width: 100%;
+	max-width: 100%;
 	height: 470px;
 	margin-bottom: 80px;
 }
@@ -244,18 +244,6 @@ body {
 	margin-left: 24px;
 }
 
-.m_nav .m_menu {
-
-}
-
-.m_nav .m_menu ul {
-	
-}
-
-.m_nav .m_menu li {
-	
-}
-
 .m_nav .m_menu > ul > li > a {
 	position: relative;
 }
@@ -359,13 +347,13 @@ body {
 /* 슬릭 배너 */
 .slides {
 	position: relative;
-	width: 100%;
+	max-width: 100%;
 	height: 100%;
 }
 
 .slides div {
+	width: 100%;
 	height: 100%;
-	background-size: cover;
 }
 
 .slides .s1 {
@@ -919,7 +907,13 @@ body {
 	.m_nav .m_menu li a {padding: 15px 16px;}
 	.m_nav .m_menu > ul > li > a:after {right: 16px;}
 
-	
+}
+
+@media (max-width: 600px) {
+	#banner {width: 100%; height: 700px;}
+	.slides .s1 {background: url(../img/strawberry_banner_550.jpg) no-repeat center top; background-size: 100%;}
+	.slides .s2 {background: url(../img/coffeenie_sweet_pumpkin_banner_550.jpg) no-repeat center top; background-size: 100%;}
+	.slides .s3 {background: url(../img/b_big_550.jpg) no-repeat center top; background-size: 100%;}
 }
 
 @media (max-width: 480px) {
