--- a/coffeenie/css/index.css
+++ b/coffeenie/css/index.css
@@ -544,18 +544,20 @@ body {
 .coffeenie_info {
 	position: relative;
 	margin: 80px 0;
-	height: 350px;
+	height: 380px;
 	background: url(../img/FRANCHISE.jpg) no-repeat center left;
 	background-size: cover;
 }
 
 .coffeenie_info .info_text {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(7%,-50%);
 	text-align: left;
 	max-width: 1000px;
-	width: 50%;
+	width: 40%;
 	color: #fff;
-	margin-left: auto;
-	margin-right: 0;
 }
 
 .coffeenie_info .info_text h2 {
@@ -570,6 +572,31 @@ body {
 
 .coffeenie_info .info_text p {
 	margin-top: 20px;
+	/* word-wrap: break-word; */
+}
+
+.coffeenie_info .info_text .info_button {
+	margin-top: 20px;	
+}
+
+.coffeenie_info .info_text .info_button button {
+	display: inline-block;
+	width: 30%;
+	cursor: pointer;
+	margin-right: 6px;
+	padding: 8px 0;
+}
+
+.coffeenie_info .info_text .info_button .franchise_btn {
+	background-color: #fff;
+	color: #5a87c5;
+}
+
+.coffeenie_info .info_text .info_button .brand_btn,
+.coffeenie_info .info_text .info_button .newshop_btn {
+	background-color: #5a87c5;
+	border: 1px solid #fff;
+	color: #fff;
 }
 
 /* MD 상품 */
@@ -826,7 +853,7 @@ body {
 /* media query */
 @media (max-width: 1024px) {
 	html {font-size: 50%;}
-	#header {position: fixed; top: 0; left: 0; height: 70px; z-index: 15; box-shadow: 0px 1px 10px #999;}
+	#header {position: fixed; top: 0; left: 0; height: 70px; z-index: 15; box-shadow: 0px 1px 5px #777;}
 
 	.container {
 		width: 100%;
@@ -876,6 +903,13 @@ body {
 	.m_nav .m_menu li a {padding: 15px 16px;}
 	.m_nav .m_menu > ul > li > a:after {right: 16px;}
 
+	.coffeenie_info {height: 850px; background: url(../img/FRANCHISE_vertical.jpg) no-repeat center bottom; background-size: cover;}
+	.coffeenie_info .info_text {top: 20%; width: 80%; transform: translate(-50%,-50%); text-align: center;}
+	.coffeenie_info .info_text h2 {font-size: 2.3rem;}
+	.coffeenie_info .info_text .info_logo img {width: 220px; margin: 15px auto;}
+	.coffeenie_info .info_text p {font-size: 1.8rem;}
+	.coffeenie_info .info_text .info_button .franchise_btn {width: 60%; display: block; margin: 0 auto;}
+	.coffeenie_info .info_text .info_button .brand_btn, .coffeenie_info .info_text .info_button .newshop_btn {width: 28%; margin-top: 10px;}
 }
 
 @media (max-width: 480px) {
