--- a/coffeenie/css/index.css
+++ b/coffeenie/css/index.css
@@ -904,12 +904,15 @@ body {
 	.m_nav .m_menu > ul > li > a:after {right: 16px;}
 
 	.coffeenie_info {height: 850px; background: url(../img/FRANCHISE_vertical.jpg) no-repeat center bottom; background-size: cover;}
-	.coffeenie_info .info_text {top: 20%; width: 80%; transform: translate(-50%,-50%); text-align: center;}
+	.coffeenie_info .info_text {top: 28%; width: 80%; transform: translate(-50%,-50%); text-align: center;}
 	.coffeenie_info .info_text h2 {font-size: 2.3rem;}
 	.coffeenie_info .info_text .info_logo img {width: 220px; margin: 15px auto;}
 	.coffeenie_info .info_text p {font-size: 1.8rem;}
+	.coffeenie_info .info_text .info_button {box-sizing: border-box;}
 	.coffeenie_info .info_text .info_button .franchise_btn {width: 60%; display: block; margin: 0 auto;}
-	.coffeenie_info .info_text .info_button .brand_btn, .coffeenie_info .info_text .info_button .newshop_btn {width: 28%; margin-top: 10px;}
+	.coffeenie_info .info_text .info_button .brand_btn {margin-right: 1%;}
+	.coffeenie_info .info_text .info_button .newshop_btn {margin-right: 0px;}
+	.coffeenie_info .info_text .info_button .brand_btn, .coffeenie_info .info_text .info_button .newshop_btn {width: 29%; margin-top: 10px;}
 }
 
 @media (max-width: 480px) {
